--- a/prototype/index.html
+++ b/prototype/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- css -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/leaflet.css" />
+
+    <!-- JavaScript -->
+    <script src="js/vendor/main.js"></script>
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <script src="js/vendor/leaflet.js"></script>
+    <script src="js/vendor/polyline.js"></script>
 
     <title>BusTracker</title>
 </head>
@@ -16,7 +23,7 @@
             <img src="logo" alt="Logo" width="200px" height="200px">
             <nav>
                 <ul>
-                    <a href="">Live Map</a>
+                    <a href="live_map">Live Map</a>
                     <a href="">Plan Trip</a>
                     <a href="">Timetable</a>
                     <a href="">Login</a>
@@ -36,9 +43,7 @@
             <p>16:09</p>
 
         </div>
-        <div id="Map">
-
-        </div>
+        <div id="map"></div>
     </main>
     <footer>
 
