--- a/prototype/index.html
+++ b/prototype/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/leaflet.css" />
 
     <!-- JavaScript -->
-    <script src="js/vendor/main.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     <script src="js/vendor/leaflet.js"></script>
     <script src="js/vendor/polyline.js"></script>
