--- a/prototype/index.html
+++ b/prototype/index.html
@@ -43,6 +43,8 @@
             <p>16:09</p>
 
         </div>
+        
+        <!-- Bus route map -->
         <div id="map"></div>
     </main>
     <footer>
