fixed nav bar link

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -23,7 +23,7 @@
             <img src="logo" alt="Logo" width="200px" height="200px">
             <nav>
                 <ul>
-                    <a href="live_map">Live Map</a>
+                    <a href="">Live Map</a>
                     <a href="">Plan Trip</a>
                     <a href="">Timetable</a>
                     <a href="">Login</a>
@@ -43,7 +43,7 @@
             <p>16:09</p>
 
         </div>
-        
+
         <!-- Bus route map -->
         <div id="map"></div>
     </main>
