--- a/prototype/index.html
+++ b/prototype/index.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="css/leaflet.css" />
 
     <!-- JavaScript -->
-    <script src="js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     <script src="js/vendor/leaflet.js"></script>
     <script src="js/vendor/polyline.js"></script>
+    <script src="js/main.js"></script>
 
     <title>BusTracker</title>
 </head>
