added bus data to html page when live bus is clicked on

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -34,15 +34,11 @@
     </header>
 
     <main>
-        <div id="RouteTimes">
-            <h1>Bus Stops</h1>
-            <p>Last refresh at 16:05</p>
-
-            <h2>Justice Mill Lane</h2>
-            <p>Union Square</p>
-            <p>Bus 5</p>
-            <p>16:09</p>
-
+        <div id="busData">
+            <h2 id="busRoute"></h2>
+            <h3 id="busDestination"></h3>
+            <p id="busTimes"></p>
+            <p id="refreshTime"></p>
         </div>
 
         <!-- Bus route map -->
