--- a/prototype/index.html
+++ b/prototype/index.html
@@ -34,7 +34,9 @@
     </header>
 
     <main>
+        
         <div id="busData">
+            <h1>Bus Times</h1>
             <h2 id="busRoute"></h2>
             <h3 id="busDestination"></h3>
             <p id="busTimes"></p>
@@ -43,6 +45,7 @@
 
         <!-- Bus route map -->
         <div id="map"></div>
+    
     </main>
     <footer>
 
