Added Bus Tracker img logo and changes to Front end
Image is CC edited in photoshop

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div id="TopNav">
-            <img src="logo" alt="Logo" width="200px" height="200px">
+            <img src="BusTracker.png" alt="Logo" width="150px" height="80px">
             <nav>
                 <ul>
                     <a href="">Live Map</a>
