created and intialised the other pages

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -24,10 +24,10 @@
             <img src="logo" alt="Logo" width="200px" height="200px">
             <nav>
                 <ul>
-                    <a href="">Live Map</a>
-                    <a href="">Plan Trip</a>
-                    <a href="">Timetable</a>
-                    <a href="">Login</a>
+                    <a href="index.html">Live Map</a>
+                    <a href="PlanTrip.html">Plan Trip</a>
+                    <a href="Timetable.html">Timetable</a>
+                    <a href="Login.html">Login</a>
                 </ul>
             </nav>
         </div>
