--- a/prototype/Login.html
+++ b/prototype/Login.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <div id="TopNav">
-            <img src="logo" alt="Logo" width="200px" height="200px">
+            <img src="BusTracker.png" alt="Logo" width="150" height="80px">
             <nav>
                 <ul>
                     <a href="index.html">Live Map</a>
@@ -19,5 +20,20 @@
             </nav>
         </div>
     </header>
+
+    <main>
+        <div id="LoginSection">
+            <h1>Login</h1>
+            <form action="Login">
+                <input type="text" placeholder="Email"><br>
+                <input type="text" placeholder="Password"><br>
+                <input type="submit" placeholder=>
+            </form>
+        </div>
+
+
+
+
+    </main>
 </body>
 </html>
