--- a/prototype/index.html
+++ b/prototype/index.html
@@ -26,9 +26,9 @@
             <h1 id="title">Bus Tracker</h1>
             <ul>
                 <li><a href="index.html">Live Map</a></li>
-                <li><a href="PlanTrip.html">Plan Trip</a></li>
-                <li><a href="Timetable.html">Timetable</a></li>
-                <li><a href="Login.html">Login</a></li>
+                <li><a href="plan_trip.html">Plan Trip</a></li>
+                <li><a href="timetable.html">Timetable</a></li>
+                <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
     </header>
