having issues with the nav bar css!!!

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -30,7 +30,7 @@
                 <li><a href="index.html">Live Map</a></li>
                 <li><a href="plan_trip.html">Plan Trip</a></li>
                 <li><a href="timetable.html">Timetable</a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a href="login.html"><i class="fa-solid fa-user"></i></a></li>
             </ul>
         </nav>
     </header>
