--- a/prototype/index.html
+++ b/prototype/index.html
@@ -27,7 +27,7 @@
             <img id="logo" src="images/logo.png" alt="Logo">
             <h1 id="title">Bus Tracker</h1>
             <ul>
-                <li><a href="index.html">Live Map</a></li>
+                <li id="active"><a href="index.html">Live Map</a></li>
                 <li><a href="plan_trip.html">Plan Trip</a></li>
                 <li><a href="timetable.html">Timetable</a></li>
                 <li><a href="login.html"><i class="fa-solid fa-user"></i></a></li>
