fixed the user dropdown on the nav

--- a/prototype/timetable.html
+++ b/prototype/timetable.html
@@ -39,7 +39,7 @@
         
                 <!-- Navbar Content aligned to the right -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">  <!-- Added ms-auto to align right -->
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">  
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Map</a>
                         </li>
@@ -53,15 +53,15 @@
                         <!-- login Dropdown -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="fa-solid fa-user"></i>  <!-- Replace text with icon -->
+                                <i class="fa-solid fa-user"></i> 
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">  
                                 <li><a class="dropdown-item" href="#">Settings</a></li>
                                 <li><a class="dropdown-item" href="#">Favorites</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="login.html">Login/Sign Out</a></li>
                             </ul>
-                        </li>
+                        </li>>
                     </ul>
                 </div>
             </div>
