--- a/prototype/login.html
+++ b/prototype/login.html
@@ -77,10 +77,13 @@
                 <input type="submit" placeholder=>
             </form>
         </div>
-
-
-
-
     </main>
+
+    <footer>
+        <div class="footer-container">
+            <p>&copy; 2024 Bus Tracker. All rights reserved.</p>
+        </div>
+    </footer>
+    
 </body>
 </html>
