--- a/prototype/timetable.html
+++ b/prototype/timetable.html
@@ -70,5 +70,12 @@
     <main>
 
     </main>
+
+    <footer>
+        <div class="footer-container">
+            <p>&copy; 2024 Bus Tracker. All rights reserved.</p>
+        </div>
+    </footer>
+    
 </body>
 </html>
