--- a/prototype/plan_trip.html
+++ b/prototype/plan_trip.html
@@ -67,5 +67,16 @@
             </div>
         </nav>
     </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+        <div class="footer-container">
+            <p>&copy; 2024 Bus Tracker. All rights reserved.</p>
+        </div>
+    </footer>
+    
 </body>
 </html>
