added 2 esater eggs for ross :)

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -58,6 +58,7 @@
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">  
                                 <li><a class="dropdown-item" href="#">Settings</a></li>
                                 <li><a class="dropdown-item" href="#">Favorites</a></li>
+                                <li><button class="dropdown-item" id="easterEggButton">Buses</button></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="login.html">Login/Sign Out</a></li>
                             </ul>
@@ -80,12 +81,15 @@
             <p id="busTimes"></p>
             <p id="refreshTime"></p>
         </div>
+        
+        <!-- Easter Egg -->
+        <div id="easterEggContainer"></div>
     
     </main>
 
     <footer>
         <div class="footer-container">
-            <p>&copy; 2024 Bus Tracker. All rights reserved.</p>
+            <a id="footerLink" href="https://www.youtube.com/watch?v=xvFZjo5PgG0"><p>&copy; 2024 Bus Tracker. All rights reserved.</p></a>
         </div>
     </footer>
 
