Changes to Login design

--- a/prototype/login.html
+++ b/prototype/login.html
@@ -67,8 +67,13 @@
             </div>
         </nav>
     </header>
-
+    <style>
+        main{
+            background-image:url(images/Map.png);
+        }
+    </style>
     <main>
+   
         <div id="LoginSection">
             <h1>Login</h1>
             <form action="Login">
