--- a/prototype/login.html
+++ b/prototype/login.html
@@ -56,8 +56,8 @@
                                 <i class="fa-solid fa-user"></i> 
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">  
-                                <li><a class="dropdown-item" href="#">Settings</a></li>
-                                <li><a class="dropdown-item" href="#">Favorites</a></li>
+                                <li><a class="dropdown-item" href="Settings.html">Settings</a></li>
+                                <li><a class="dropdown-item" href="Favorites.html">Favorites</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="login.html">Login/Sign Out</a></li>
                             </ul>
@@ -81,6 +81,7 @@
                 <input type="text" placeholder="Password"><br>
                 <input type="submit" placeholder=>
             </form>
+        
         </div>
     </main>
 
