--- a/prototype/index.html
+++ b/prototype/index.html
@@ -37,8 +37,8 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
         
-                <!-- Navbar Content aligned to the right -->
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <!-- Navbar content aligned to the right -->
+                <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">  
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">Map</a>
@@ -46,18 +46,18 @@
                         <li class="nav-item">
                             <a class="nav-link" href="timetable.html">Timetables</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="plan_trip.html">Plan Trip</a>
+                        <li onclick="alert('This feature is coming soon!')" class="nav-item">
+                            <a class="nav-link" href="#">Plan Trip</a>
                         </li>
         
-                        <!-- login Dropdown -->
+                        <!-- login dropdown -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fa-solid fa-user"></i> 
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">  
-                                <li><a class="dropdown-item" href="Settings.html">Settings</a></li>
-                                <li><a class="dropdown-item" href="Favorites.html">Favorites</a></li>
+                                <li><a class="dropdown-item" href="settings.html">Settings</a></li>
+                                <!--<li><a class="dropdown-item" href="favorites.html">Favorites</a></li>-->
                                 <li><button class="dropdown-item" id="easterEggButton">Buses</button></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="login.html">Login/Sign Out</a></li>
