Make CSS class names consistent

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -74,10 +74,10 @@
         <!-- Bus route map -->
         <div id="map"></div>
         
-        <div id="busData">
+        <div id="bus-data">
 
             <!--
-            <div class="busTimeRecord">
+            <div class="bus-time-record">
                 <h2>X8 <span id="destination">to Stonehaven</span></h2>
                 <p id="times">00:00 (Exp: 00:01)<br><span>CANCELLED</span></p>
             </div>
@@ -91,7 +91,7 @@
 
     <footer>
         <div class="footer-container">
-            <a id="footerLink" href="https://www.youtube.com/watch?v=xvFZjo5PgG0"><p>&copy; 2024 Bus Tracker. All rights reserved.</p></a>
+            <a id="footer-link" href="https://www.youtube.com/watch?v=xvFZjo5PgG0"><p>&copy; 2024 Bus Tracker. All rights reserved.</p></a>
         </div>
     </footer>
 
