--- a/prototype/login.html
+++ b/prototype/login.html
@@ -81,7 +81,7 @@
 
     <footer>
         <div class="footer-container">
-            <a id="footerLink" href="https://www.youtube.com/watch?v=xvFZjo5PgG0"><p>&copy; 2024 Bus Tracker. All rights reserved.</p></a>
+            <a id="footer-link" href="https://www.youtube.com/watch?v=xvFZjo5PgG0"><p>&copy; 2024 Bus Tracker. All rights reserved.</p></a>
         </div>
     </footer>
 </body>
