--- a/prototype/timetable.html
+++ b/prototype/timetable.html
@@ -39,7 +39,7 @@
                 </button>
         
                 <!-- Navbar content aligned to the right -->
-                <div class="collapse navbar-collapse">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">  
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="index.html">Map</a>
