--- a/prototype/timetable.html
+++ b/prototype/timetable.html
@@ -27,25 +27,25 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <div class="container-fluid">
-                <a class="navbar-brand d-flex align-items-center" href="index.html">
+            <div class="container-fluid p-0">
+                <a class="navbar-brand d-flex align-items-center ms-2" href="index.html">
                     <img src="images/logo.png" alt="Logo" class="me-2">
                     Bus Tracker
                 </a>
         
                 <!-- Toggler -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
         
                 <!-- Navbar content aligned to the right -->
                 <div class="collapse navbar-collapse rounded-4 rounded-top-0" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 p-4">   
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 p-4">  
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="index.html">Map</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="timetable.html">Timetables</a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="timetable.html">Timetables</a>
                         </li>
                         <li onclick="alert('This feature is coming soon!')" class="nav-item">
                             <a class="nav-link" href="#">Plan Trip</a>
