--- a/prototype/index.html
+++ b/prototype/index.html
@@ -17,7 +17,7 @@
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     <script src="js/vendor/leaflet.js"></script>
     <script src="js/vendor/polyline.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/map.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <title>BusTracker</title>
